fix code width responsive

--- a/styles.css
+++ b/styles.css
@@ -110,4 +110,9 @@ footer {
     article img{
         width: 100%;
     }
+    code {
+        margin-left: 0;
+        margin-right: 0;
+        width: 100%;
+    }
 }
