--- a/styles.css
+++ b/styles.css
@@ -110,9 +110,13 @@ footer {
     article img{
         width: 100%;
     }
+    main {
+        width: 100vw;
+    }
     code {
-        margin-left: 0;
-        margin-right: 0;
+        margin: 0;
+        margin-top: 25px;
+        margin-bottom: 25px;
         width: 100%;
     }
 }
